--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>게시판 등록</title>
+        <title>글수정</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
@@ -9,16 +9,16 @@
     </head>
     <body>
         <div class="container">
-            <form method="POST" action="/board/write">
-                <h1 class="main-title">게시글 목록</h1>
+            <form method="POST" action="/board/edit?id=<%=board._id%>">
+                <h1 class="main-title">글수정</h1>
     
                 <div class="form-group">
                     <label for="exampleFormControlInput1">제목</label>
-                    <input type="text" name="title" class="form-control" id="exampleFormControlInput1" placeholder="제목">
+                    <input type="text" name="title" class="form-control" id="exampleFormControlInput1" placeholder="제목" value="<%=board.title%>">
                 </div>
                 <div class="form-group">
                     <label for="exampleFormControlTextarea1">내용</label>
-                    <textarea class="form-control" name="content" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    <textarea class="form-control" name="content" id="exampleFormControlTextarea1" rows="3"><%=board.content%></textarea>
                 </div>
 
                 <button type="submit" class="btn btn-primary btn-write">글작성</button>
